# musicbox

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: docs.yml  rust.yml
docs/: book.toml  user-guide.md
docs/src/: SUMMARY.md  library.md  maintenance.md  nfc-cards.md  operations.md  overview.md  raspberry-pi.md  setup.md  troubleshooting.md
musicbox/: Cargo.toml  README.md  coverage-report.txt
musicbox/examples/: config.example.toml
musicbox/scripts/: build-armv7.sh  run-local.sh
musicbox/src/: app.rs  audio.rs  config.rs  controller.rs  lib.rs  main.rs  reader.rs  telemetry.rs  web.rs
musicbox/tests/: cli.rs
scripts/: build-armv7.sh
src/: app.rs  audio.rs  config.rs  controller.rs  display.rs  lib.rs  main.rs  reader.rs  web.rs
tests/: cli.rs
