[package]
name = "musicbox"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug-http", "waveshare-display"]
audio-rodio = ["dep:rodio"]
nfc-pcsc = ["dep:pcsc"]
debug-http = ["dep:axum", "dep:tokio"]
waveshare-display = [
    "dep:epd-waveshare",
    "dep:embedded-graphics",
    "dep:linux-embedded-hal",
    "dep:gpio-cdev",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
tempfile = "3.12"
toml_edit = "0.22"
rodio = { version = "0.21.1", optional = true }
pcsc = { version = "2.9.0", optional = true }
clap = { version = "4.5.49", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum = { version = "0.7", optional = true, features = ["json"] }
tokio = { version = "1.40", optional = true, features = ["rt-multi-thread", "macros"] }
epd-waveshare = { version = "0.6", optional = true }
embedded-graphics = { version = "0.8", optional = true }
linux-embedded-hal = { version = "0.4", optional = true }
gpio-cdev = { version = "0.6", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[patch.crates-io]
alsa = { path = "vendor/alsa" }
