[package]
name = "musicbox"
version = "0.1.0"
edition = "2024"

[features]
default = []

# Enables Rodio-based audio playback. Off by default because it pulls in system audio
# libraries that may not exist on the development machine.
audio-rodio = ["dep:rodio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
tempfile = "3.12"
rodio = { version = "0.21.1", optional = true }
