[package]
name = "musicbox"
version = "0.1.0"
edition = "2024"

[features]
default = []
audio-rodio = ["dep:rodio"]
nfc-pcsc = ["dep:pcsc"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
tempfile = "3.12"
rodio = { version = "0.21.1", optional = true }
pcsc = { version = "2.9.0", optional = true }
clap = { version = "4.5.49", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
